e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>