e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/fields/CSD_Account_Health_Score__c.field-meta.xml
<CustomField>
            <fullName>CSD_Account_Health_Score__c</fullName>
            <label>Account Health Score</label>
            <description>Overall health status of the customer relationship. Red indicates at-risk accounts requiring immediate attention.</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Healthy</fullName>
                    </value>

                    <value>
                        <fullName>Needs Attention</fullName>
                    </value>

                    <value>
                        <fullName>At Risk</fullName>
                    </value>
                    
                    <value>
                        <fullName>Not Assessed</fullName>
                        <default>true</default>
                        <label>Not Assessed</label>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>