e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/fields/CSD_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>CSD_At_Risk__c</fullName>
    <label>At Risk</label>
    <description>Flag when this account requires immediate Customer Success attention.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>