e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/fields/CSD_Previous_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>CSD_Previous_Health_Score__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Automatically maintained. Stores the prior value of Account Health Score so the dashboard can display a trend (improving / declining / stable) that is always in sync with the currently displayed score.</description>
    <inlineHelpText>Automatically maintained. Stores the prior value of Account Health Score so the dashboard can show a consistent trend.</inlineHelpText>
    <label>Previous Health Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Not Assessed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>