e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/fields/CSD_Primary_CSM__c.field-meta.xml
<CustomField>
            <fullName>CSD_Primary_CSM__c</fullName>
            <label>Primary CSM</label>
            <description>The assigned Customer Success Manager responsible for this account</description>
            <type>Lookup</type>
            <referenceTo>User</referenceTo>
            <relationshipLabel>Accounts (Primary CSM)</relationshipLabel>
            <relationshipName>CSD_Primary_CSM_Accounts</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>