e79a702c-5872-44bb-810e-f2cc8f4fb248/force-app/main/default/objects/Account/fields/CSD_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>CSD_Renewal_Date__c</fullName>
    <label>Renewal Date</label>
    <description>Contract or subscription renewal date for Customer Success planning.</description>
    <type>Date</type>
</CustomField>